--- a/Demo_1.html
+++ b/Demo_1.html
@@ -8,10 +8,13 @@
     <title>Demo_1</title>
     <!-- <link href="../jspsych/jspsych.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css">
-    <script src="../jspsych/jspsych.js"></script>
-    <script src="../jspsych/plugin-html-keyboard-response.js"></script>
-    <script src="../jspsych/plugin-instructions.js"></script>
-    <script src="../matter-js-0.19.0/build/matter.min.js"></script>
+    <!-- <script src="../jspsych/jspsych.js"></script> -->
+    <script src="https://unpkg.com/jspsych@7.3.3"></script>
+    <!-- <script src="../jspsych/plugin-html-keyboard-response.js"></script> -->
+    <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.2"></script>
+    <!-- <script src="../jspsych/plugin-instructions.js"></script> -->
+    <!-- <script src="../matter-js-0.19.0/build/matter.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
 </head>
 
 <body>
