--- a/index.html
+++ b/index.html
@@ -6,28 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo_2</title>
-    <!-- <link href="../jspsych/jspsych.css" rel="stylesheet"> -->
-    <link rel="stylesheet" href="Demo_2/style.css">
-    <!-- <script src="../jspsych/jspsych.js"></script> -->
-    <script src="https://unpkg.com/jspsych@7.3.3"></script>
-    <!-- <script src="../jspsych/plugin-html-keyboard-response.js"></script> -->
-    <script src="https://unpkg.com/@jspsych/plugin-html-keyboard-response@1.1.2"></script>
-    <script src="https://unpkg.com/@jspsych/plugin-html-button-response@1.1.2"></script>
-    <!-- <script src="../jspsych/plugin-instructions.js"></script> -->
-    <!-- <script src="../matter-js-0.19.0/build/matter.min.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
-    <script src="Demo_2/shared_setUp.js"></script>
-    <script src="Demo_2/fallingScene_info.js"></script>
-    <script src="Demo_2/reconstructionTask_info.js"></script>
+    <meta http-equiv="refresh" content="0; url=https://github.com/cindyLuo99/intuitivePhysics/blob/f296471322ab8598d366bf599e009a9b0a5cfd0e/Demo_2/Demo_2.htmlhttps://github.com/cindyLuo99/intuitivePhysics/Demo_2/Demo_2.html">
 </head>
 
 <body>
-    <!-- <div id="simulation"></div> -->
-    <div id="prompt-container">
-        <!-- Add your prompt content here -->
-        <!-- <p> Reconstruct the physical scene by moving the position of the obstacle with your cursor.</p> -->
-    </div>
-    <script src="Demo_2/script_2.js"></script>
 </body>
 
 </html>
