--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo_2</title>
-    <meta http-equiv="refresh" content="0; url=https://github.com/cindyLuo99/intuitivePhysics/blob/f296471322ab8598d366bf599e009a9b0a5cfd0e/Demo_2/Demo_2.htmlhttps://github.com/cindyLuo99/intuitivePhysics/Demo_2/Demo_2.html">
+    <meta http-equiv="refresh" content="0; url=https://github.com/cindyLuo99/intuitivePhysics/blob/f296471322ab8598d366bf599e009a9b0a5cfd0e/Demo_2/Demo_2.html">
 </head>
 
 <body>
