--- a/Experiment_0_pilot/getTrajectories.html
+++ b/Experiment_0_pilot/getTrajectories.html
@@ -47,7 +47,12 @@
         <!-- <p> Reconstruct the physical scene by moving the position of the obstacle with your cursor.</p> -->
     <!-- </div> -->
     <!-- <div id="canvas-container"></div> -->
+    
+    <!-- script for getting trajectories -->
     <script src="getTrajectories.js"></script>
+
+    <!-- script for generating the figure for multiple choice -->
+    <!-- <script src="generateFigure_MC.js"></script> -->
 </body>
 
 </html>
