Added Pilot 2 code&data&analysis

--- a/Experiment_2_pilot1/index.html
+++ b/Experiment_2_pilot1/index.html
@@ -48,7 +48,8 @@
     <!-- </div> -->
     <!-- <div id="canvas-container"></div> -->
     <!-- <script src="pracTrials_info_gen.js"></script> -->
-    <script src="experimentScript_2_demo.js"></script>
+    <script src="experimentScript_2.js"></script>
+    <!-- <script src="experimentScript_2_v1_demo.js"></script> -->
     <!-- <script src="practice_trial_1.js"></script> -->
 </body>
 
